write client click event handler, client POST route for new task

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,18 +13,21 @@
     <h1>Tambo's To-Do's</h1>
     <label for="new-task">TO-DO:
     <input type="text" id="new-task" placeholder="e.g. Wash the dishes"/>
+    <input type="text" id="task-details" placeholder="Details:">
     <button id="add-task">Add</button>
     </label>
     <table>
         <thead>
             <tr>
                 <th>Task</th>
+                <th>Details</th>
                 <th>Completed?</th>
                 <th> </th>
                 <th>When</th>
             </tr>
         </thead>
         <tbody id="tasklist">
+            <td></td>
             <td></td>
             <td></td>
             <td><label class="container">
