--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Rajdhani:wght@400;700&display=swap" rel="stylesheet">
+
     <title>Tambo's To-Do's</title>
     <script src="vendors/jquery.js"></script>
     <script src="scripts/client.js"></script>
@@ -11,7 +15,7 @@
 </head>
 <body>
     <h1>Tambo's To-Do's</h1>
-    <label for="new-task">TO-DO:
+    <label for="new-task" id="task-label">TO-DO:
     <input type="text" id="new-task" placeholder="e.g. Wash the dishes"/>
     <input type="text" id="task-details" placeholder="Details:">
     <button id="add-task">Add</button>
