getting the checkmarks working

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -25,7 +25,7 @@
             <tr>
                 <th>Task</th>
                 <th>Details</th>
-                <th>Completed?</th>
+                <th>Done</th>
                 <th> </th>
                 <th>When</th>
             </tr>
