--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Rajdhani:wght@400;700&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
     <label for="new-task" id="task-label">TO-DO:
     <input type="text" id="new-task" placeholder="e.g. Wash the dishes"/>
     <input type="text" id="task-details" placeholder="Details:">
-    <button id="add-task">Add</button>
+    <button class="btn btn-success" id="add-task">Add</button>
     </label>
     <table>
         <thead>
@@ -26,7 +27,7 @@
                 <th>Task</th>
                 <th>Details</th>
                 <th>Done</th>
-                <th> </th>
+                <th>Delete</th>
                 <th>When</th>
             </tr>
         </thead>
@@ -41,6 +42,6 @@
             <td></td>
         </tbody>
     </table>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
