--- a/server/public/index.html
+++ b/server/public/index.html
@@ -26,7 +26,7 @@
                 <th>Task</th>
                 <th>Details</th>
                 <th>Done</th>
-                <th> </th>
+                <th>Delete</th>
                 <th>When</th>
             </tr>
         </thead>
